--- a/src/app/cleaning-fee/cleaning-fee.component.html
+++ b/src/app/cleaning-fee/cleaning-fee.component.html
@@ -14,6 +14,10 @@
         </h1>
         <h1 class="cleaningservice2">
             <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text"> Inverter (+Php 200)</label>
+        </h1>
+        <h1 class="cleaningservice2">
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
             <label class="text"> Condenser and filter cleaning </label>
         </h1>
         <h1 class="cleaningservice2">
