--- a/src/app/repair-fee/repair-fee.component.html
+++ b/src/app/repair-fee/repair-fee.component.html
@@ -7,6 +7,10 @@
         <p class="aircondescrip2">If you decide to proceed with the repair, your total costs will include the checkup fee and labor. If you decline the repair, please pay our technician this checkup fee.</p>
         <h1 class="repairservice1">
             <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text">Inverter (+Php 200)</label>
+        </h1>
+        <h1 class="repairservice1">
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
             <label class="text">Full diagnosis of the unit problem</label>
         </h1>
         <h1 class="repairservice1">
