--- a/src/app/admin-user/admin-user.component.html
+++ b/src/app/admin-user/admin-user.component.html
@@ -6,16 +6,26 @@
         <br>
         <mat-nav-list class="nav-list">
             <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <img class="adminvector" mat-card-image src="../../assets/admin.png">
+
+            <h1 class="sidetitle">Admin</h1>
+
             <div class="dashboardside">
-                <mat-list-item (click)="goAdmin()">
+                <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-                    <a class="dashboard-btn">Dashboard</a>
+                    <a class="dashboard-btn" routerLink="/admin">Dashboard</a>
                 </mat-list-item>
             </div>
             <div class="bookingside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">worker</mat-icon>
                     <a class="booking-btn" routerLink="/technicians">Technicians</a>
+                </mat-list-item>
+            </div>
+            <div class="feedbackside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">feedback</mat-icon>
+                    <a class="feedback-btn" routerLink="/feedback">Feedbacks</a>
                 </mat-list-item>
             </div>
             <div class="profileside">
