--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -89,6 +89,26 @@
             margin-left: 20px;
             margin-top: 25px;
         }
+        .feedbackside {
+            margin-left: 0px;
+            margin-top: 30px;
+            text-align: justify;
+        }
+        .feedbackside:hover {
+            background-color: #D6B2BD;
+            color: #FFFFFF;
+            border-radius: 20px;
+            width: 100%;
+            height: 70px;
+            text-align: center !important;
+        }
+        .feedback-btn {
+            color: #003049;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 16px;
+            margin-left: 20px;
+            margin-top: 25px;
+        }
         .profileside {
             margin-left: 0px;
             margin-top: 30px;
