--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,40 +1,79 @@
-<body>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+  <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+</button>
+        <br>
+        <mat-nav-list class="nav-list">
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <img class="adminvector" mat-card-image src="../../assets/admin.png">
 
-   
-    <mat-toolbar>
-        <h1 class="ayosgamit" routerLink="/home" >Ayosgamit</h1>
-    </mat-toolbar>
-<div>
-    <div>
-    <img class="vector" mat-card-image src="../../assets/feedback.png">
-    </div>
+            <h1 class="sidetitle">Admin</h1>
 
-    <div class="descrip">
-        <p><b>Feel free to</b></p>
-        <p class="p2"><b>drop us your feedback.</b></p>
-      
-   </div>
+            <div class="dashboardside">
+                <mat-list-item (click)="goAdmin()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
+                    <a class="dashboard-btn" routerLink="/admin">Dashboard</a>
+                </mat-list-item>
+            </div>
+            <div class="bookingside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">worker</mat-icon>
+                    <a class="booking-btn" routerLink="/technicians">Technicians</a>
+                </mat-list-item>
+            </div>
 
-    <mat-card>
-        <div>
-            <p class="p1">Overall, how satisfied are you with the service of our technicians?</p>
-            
-        </div>
+            <div class="feedbackside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">feedback</mat-icon>
+                    <a class="feedback-btn" routerLink="/feedback">Feedbacks</a>
+                </mat-list-item>
+            </div>
 
-      <div>
-        <mat-form-field appearance="outline">
-            <mat-label></mat-label>
-            <input matInput placeholder="Tell something about our service..">
-            
-            
-          </mat-form-field>
-      </div>
-        
-        <div>
-            <button class="sendBtn" mat-raised-button>Send Feedback</button>
-        </div>
-    </mat-card>
+            <div class="profileside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+                    <a class="profile-btn" routerLink="/user">Users</a>
+                </mat-list-item>
+            </div>
+            <div class="logoutside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon">exit_to_app</mat-icon>
+                    <a class="logout-btn" (click)="logout()">Logout</a>
+                </mat-list-item>
+            </div>
+        </mat-nav-list>
+    </mat-sidenav>
 
-</div>
-
-</body>
+    <mat-sidenav-content>
+        <mat-toolbar>
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+              <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+          </button>
+        </mat-toolbar>
+        <mat-card class="activecard">
+            <h1 class="activetitle"> Feedbacks </h1>
+            <label class="label2">View list of feedbacks.</label>
+            <div class="table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th scope="col" class="header">Email</th>
+                            <th scope="col" class="header">First Name</th>
+                            <th scope="col" class="header">Last Name</th>
+                            <th scope="col" class="header">Feedback</th>
+                        </tr>
+                    </thead>
+                    <tbody class="body">
+                        <tr *ngFor="let fed of data">
+                            <td>{{fed.createdBy}}</td>
+                            <td>{{fed.first_name}}</td>
+                            <td>{{fed.last_name}}</td>
+                            <td>{{fed.feedback}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </mat-card>
+    </mat-sidenav-content>
+</mat-sidenav-container>
