--- a/src/app/request-complete/request-complete.component.css
+++ b/src/app/request-complete/request-complete.component.css
@@ -4,18 +4,12 @@
     }
     .sidenav {
         width: fit-content;
-        width: 280px;
-        background-color: #EAE2B7;
+        width: 250px;
+        background-color: #FFFFFF;
     }
     .mat-sidenav-content {
         height: 910px;
         background-color: white;
-    }
-    .logo {
-        width: 180px;
-        height: 150px;
-        padding-top: 40px;
-        margin-left: 55px;
     }
     .mat-toolbar {
         background-color: #DD0346;
@@ -23,50 +17,57 @@
         height: 100px;
         box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
     }
-    .ayosgamit {
-        font-family: 'Candara';
-        font-size: 30px;
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
         float: left;
-        color: #FFFFFF;
+        margin-top: -20px !important;
+        margin-left: 25px;
     }
-    .dashtitle {
+    .adminvector {
+        width: 95%;
+        margin-top: -110px !important;
+        margin-left: 10px;
+    }
+    .sidetitle {
         color: #003049;
-        font-size: 25px;
-        margin-left: 80px;
-        margin-top: 60px;
+        font-size: 20px;
+        margin-top: -10px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .dashvector {
-        width: 360px;
-        height: 250px;
-        margin-left: 620px;
-        margin-top: -60px;
+        text-align: center;
     }
     .nav-icon {
         color: #003049;
-        font-size: 35px;
-        margin-left: 25px;
-        margin-top: -12px;
+        font-size: 28px;
+        margin-left: 20px;
+        margin-top: 15px;
+    }
+    mat-list-item {
+        background-color: transparent !important;
     }
     .dashboardside {
         margin-left: 0px;
-        margin-top: 30px;
+        margin-top: 50px;
         text-align: justify;
-    }
-    .dashboardside:hover {
-        background-color: #c8c19c;
+        background-color: #D6B2BD;
+        border-radius: 20px;
         width: 100%;
         height: 70px;
-        margin-left: 0;
-        margin-top: 20px;
-        text-align: justify;
     }
     .dashboard-btn {
         color: #003049;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        margin-left: 25px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
         text-decoration: none;
+    }
+    .dashboardside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
     }
     .bookingside {
         margin-left: 0px;
@@ -74,18 +75,39 @@
         text-align: justify;
     }
     .bookingside:hover {
-        background-color: #c8c19c;
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
         width: 100%;
         height: 70px;
-        margin-left: 0;
-        margin-top: 20px;
-        text-align: justify;
+        text-align: center !important;
     }
     .booking-btn {
         color: #003049;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        margin-left: 25px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .feedbackside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .feedbackside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .feedback-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
     }
     .profileside {
         margin-left: 0px;
@@ -93,33 +115,49 @@
         text-align: justify;
     }
     .profileside:hover {
-        background-color: #c8c19c;
+        background-color: #D6B2BD;
+        border-radius: 20px;
         width: 100%;
         height: 70px;
-        margin-left: 0;
-        margin-top: 20px;
-        text-align: justify;
+        text-align: center !important;
     }
     .profile-btn {
         color: #003049;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        margin-left: 25px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .logout-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -5px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
     }
     .spacer {
         flex: 1 1 auto;
     }
-    .inboxicon {
-        font-size: 30px;
-        color: #14213D;
-        margin-right: 20px;
-    }
-    .logoutBtn {
+    .sidetitle {
+        color: #003049;
         font-size: 20px;
-        color: antiquewhite;
-    }
-    .logoutBtn:hover {
-        background-color: black;
+        margin-top: -10px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
     }
     .container {
         width: 100%;
@@ -130,255 +168,172 @@
         margin: auto;
         margin-top: 50px;
     }
-    .backtxt {
-        color: #003049;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 13px;
-        margin-top: -25px;
-        margin-left: 50px;
-    }
-    .servicetype {
-        color: #FFFFFF;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .backBtn {
         font-size: 20px;
-        position: center;
-        margin: auto;
-    }
-    .header {
-        width: 750px;
-        height: 200px;
+        float: left;
         margin-top: -10px !important;
-        position: center !important;
-        margin: auto;
+        background-color: grey;
+    }
+    .backicon {
+        color: #FFFFFF;
+        float: left;
+        margin-left: 2px;
+        font-size: 35px;
     }
     .summary {
-        width: 750px;
-        height: 700px;
+        width: 900px;
+        height: 650px;
         margin-top: 50px !important;
         position: center !important;
         margin: auto;
     }
+    .remindervector {
+        width: 20%;
+        margin-top: -65px !important;
+        float: left;
+        margin-left: -50px;
+    }
+    .label {
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 15px;
+    }
     .title {
-        color: #003049;
+        color: #b65e79;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 20px;
-        margin-top: -25px;
-        margin-left: 40px;
-    }
-    .icon {
-        color: #003049;
         font-size: 30px;
-        margin-top: 5px;
-        margin-left: 20px;
+        margin-top: 15px;
+        margin-left: 70px;
     }
-    .personalinfotxt {
-        color: #003049;
+    table,
+    tr,
+    th,
+    td {
+        border: none;
+    }
+    .table {
+        margin-top: 50px;
+    }
+    .header1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #b65e79;
+        border: none;
+    }
+    .body1 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
-        margin-top: 25px;
+        color: #14213D;
+        border: none;
     }
-    .fname {
-        margin-left: 20px;
-        margin-top: 20px;
+    .header2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #b65e79;
+        border: none;
     }
-    .fname2 {
-        margin-left: 20px;
-        margin-top: 10px;
-        font-size: 15px;
-    }
-    .lname {
-        margin-left: 170px;
-        margin-top: -67px;
-    }
-    .lname2 {
-        margin-left: 170px;
-        margin-top: 10px;
-        font-size: 15px;
-    }
-    .number {
-        float: right;
-        margin-right: 100px;
-        margin-top: -67px;
-    }
-    .number2 {
-        float: right;
-        margin-right: 145px;
-        margin-top: -33px;
-        font-size: 15px;
-    }
-    .addressinfo {
-        margin-top: 70px;
-    }
-    .address {
-        margin-left: 20px;
-        margin-top: -40px;
-    }
-    .address2 {
-        margin-left: 20px;
-        margin-top: 10px;
-        font-size: 13px;
-    }
-    .city {
-        margin-left: 170px;
-        margin-top: -70px;
-    }
-    .city2 {
-        margin-left: 170px;
-        margin-top: 10px;
-        font-size: 15px;
-    }
-    .property {
-        float: right;
-        margin-right: 160px;
-        margin-top: -70px;
-    }
-    .property2 {
-        float: right;
-        margin-right: 200px;
-        margin-top: -35px;
-        font-size: 15px;
-    }
-    .zipcode {
-        float: right;
-        margin-right: 20px;
-        margin-top: -70px;
-    }
-    .zipcode2 {
-        float: right;
-        margin-right: 40px;
-        margin-top: -35px;
-        font-size: 15px;
-    }
-    .serviceinfotxt {
-        color: #003049;
+    .body2 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
-        margin-top: 20px;
+        color: #14213D;
+        border: none;
     }
-    .appliance {
-        margin-left: 20px;
-    }
-    .appliance2 {
-        margin-left: 20px;
+    .cancelBtn {
+        width: 140px;
+        height: 40px;
+        background-color: #D62828;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 15px;
-    }
-    .brand {
-        margin-left: 170px;
-        margin-top: -70px;
-    }
-    .brand2 {
-        margin-left: 170px;
-        font-size: 15px;
-        margin-top: 10px;
-    }
-    .unittype {
         float: right;
-        margin-right: 190px;
-        margin-top: -70px;
-    }
-    .unittype2 {
-        float: right;
-        margin-right: 205px;
-        margin-top: -33px;
-        font-size: 15px;
-    }
-    .unitprob {
-        margin-top: 70px;
-    }
-    .unitproblem {
-        margin-left: 20px;
-        margin-top: -35px;
-    }
-    .unitproblem2 {
-        margin-left: 20px;
-        font-size: 15px;
-    }
-    .datetimeinfo {
-        margin-top: 30px;
-    }
-    .date {
-        margin-left: 20px;
-    }
-    .date2 {
-        margin-left: 20px;
-        font-size: 15px;
-    }
-    .time {
-        margin-left: 180px;
-        margin-top: -68px;
-    }
-    .time2 {
-        margin-left: 180px;
-        margin-top: 10px;
-        font-size: 15px;
-    }
-    .pending {
-        width: 100%;
-        height: 100%;
-        margin: auto;
-    }
-    .pendingtxt {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 23px;
-        color: #F77F00;
-        float: right;
-        margin-right: 740px;
-    }
-    .description {
-        float: left;
-        margin-left: 33px;
-        margin-top: 20px;
-    }
-    .description1 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
-        color: grey;
-    }
-    .description2 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
-        color: grey;
-        margin-top: -15px;
-    }
-    .description3 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
-        color: grey;
-        margin-top: -15px;
-    }
-    .serviceinfotxt {
-        font-size: 15px;
-    }
-    .container {
-        width: 100%;
-        height: 100%;
-    }
-    .backBtn {
-        font-size: 20px;
-        float: left;
         margin: 5px;
         margin-top: 1px;
-        color: #003049;
     }
-    .back {
-        font-size: 20px;
-        float: left;
-        margin-top: 3px;
+    .cancelBtn:hover,
+    .cancelBtn:active {
+        color: #f9dcc4;
+    }
+    .mat-dialog-content {
+        width: 500px;
+        height: 600px;
+    }
+    .profilecard {
+        width: 300px;
+        height: 250px;
+        margin: auto;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+    .contactnumber {
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        margin-left: 10px;
+    }
+    .number {
         color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        margin-left: 10px;
+    }
+    .techname {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 25px;
+        margin-left: 10px;
+        margin-top: 20px;
+    }
+    .feedback {
+        width: 450px;
+        font-family: 'Trebuchet MS';
+    }
+    .rateBtn {
+        width: 120px;
+        height: 40px;
+        font-size: 18px;
+        font-family: 'Trebuchet MS';
+        background-color: #fcb42a;
+        color: #FFFFFF;
+        float: right;
+        margin: 5px;
+        margin-top: 1px;
+    }
+    .star1 {
+        font-size: 30px;
+        margin: 10px;
+    }
+    .rating-list1 li {
+        color: #ddd;
+        padding: 10px 5px;
+    }
+    .rating-list1 li:hover,
+    .rating-list1 li:hover~li,
+    .rating-list1 li.selected {
+        color: #ffd700;
+    }
+    .rating-list1 {
+        display: inline-block;
+        list-style: none;
+    }
+    .star {
+        position: relative;
+        display: inline-block;
+        color: #d3d3d3;
+        font-size: 40px;
+        margin: 10px;
+    }
+    .full {
+        color: yellow;
     }
     .acceptBtn {
         width: 120px;
         height: 40px;
-        background-color: #8a1c3b;
+        font-family: 'Trebuchet MS';
+        background-color: #fcb42a;
         color: #FFFFFF;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
         float: right;
         margin: 5px;
         margin-top: 1px;
-    }
-    .acceptBtn:hover {
-        background-color: #590D22;
-        transition: 0.3s;
     }
 }
