--- a/src/app/requestdetails/requestdetails.component.html
+++ b/src/app/requestdetails/requestdetails.component.html
@@ -1,131 +1,156 @@
-<!--HEADER------------------------------------------------>
-<mat-toolbar>
-    <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
-    <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
-    <mat-menu #menu="matMenu">
-        <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
-        <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
-        <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
-        <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
-        <button mat-menu-item routerLink="/menu_tv">Television</button>
-    </mat-menu>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+        <br>
+        <mat-nav-list class="nav-list">
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <img class="adminvector" mat-card-image src="../../assets/customervector.png">
 
-    <label class="pricingBtn" routerLink="/pricing">Pricing</label>
-    <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
-    <label class="aboutusBtn" routerLink="/about_us">About Us</label>
-    <label class="aboutusBtn" (click)="goDashboard()">Home</label>
-</mat-toolbar>
-<div class="container">
-    <!--REQUEST SUMMARY------------------------------------------------>
-    <div>
-        <div>
-            <h1 class="backBtn" routerLink="/dashboard">
-                <mat-icon class="back"><b>keyboard_return</b></mat-icon>Back to Dashboard
-            </h1>
-        </div>
-        <div>
-            <button mat-raised-button (click)="open(cancelReason)" class="cancelBtn">Cancel Request</button>
-        </div>
-
-        <mat-card class="summary">
-            <div>
-                <mat-icon class="icon">description
-                    <h1 class="title">Request Details</h1>
-                </mat-icon>
+            <h1 class="sidetitle">{{fname}}</h1>
+            <div class="dashboardside" (click)="goDashboard()">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
+                    <a class="dashboard-btn">Home</a>
+                </mat-list-item>
             </div>
-            <h1 class="personalinfotxt">Personal Information</h1>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Contact Number</th>
-                        <th>Address</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>{{data.service_firstname}}</td>
-                        <td>{{data.service_lastname}}</td>
-                        <td>{{data.service_phoneNumber}}</td>
-                        <td>{{data.service_address}}</td>
-                    </tr>
-                </tbody>
-                <thead>
-                    <tr>
-                        <th>Address Details</th>
-                        <th>City</th>
-                        <th>Property Type</th>
-                        <th>Barangay</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>{{data.service_addressDetails}}</td>
-                        <td>{{data.service_city}}</td>
-                        <td>{{data.service_property_type}}</td>
-                        <td>{{data.service_barangay}}</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="bookingside" routerLink="/booking">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
+                    <a class="booking-btn">Book a Service</a>
+                </mat-list-item>
+            </div>
+            <div class="profileside" routerLink="/profile">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+                    <a class="profile-btn">Profile</a>
+                </mat-list-item>
+            </div>
 
-            <h1 class="serviceinfotxt">Service Information</h1>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Appliance</th>
-                        <th>Service</th>
-                        <th>Brand</th>
-                        <th>Unit Type</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>{{data.service_appliance}}</td>
-                        <td>{{data.service_type}}</td>
-                        <td>{{data.service_brand}}</td>
-                        <td>{{data.service_unitType}}</td>
-                    </tr>
-                </tbody>
-                <thead>
-                    <tr>
-                        <th>Unit Problem</th>
-                        <th>Scheduled Date</th>
-                        <th>Time Slot</th>
-                        <th>Instruction</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>{{data.service_unitProb}}</td>
-                        <td>{{data.service_date | date}}</td>
-                        <td>{{data.service_timeslot}}</td>
-                        <td>{{data.service_instruction}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </mat-card>
-    </div>
-    <!--Technicians Details------------------------------------------------>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Full Name</th>
-                <th>Gender</th>
-                <th>Number</th>
-                <th>Address</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>{{technician.fullname}}</td>
-                <td>{{technician.gender}}</td>
-                <td>{{technician.number}}</td>
-                <td>{{technician.address}}</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+            <div class="logoutside" (click)="logout()">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon">exit_to_app</mat-icon>
+                    <a class="logout-btn">Logout</a>
+                </mat-list-item>
+            </div>
+        </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+        <mat-toolbar>
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+                <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+              </button>
+        </mat-toolbar>
+        <div class="container">
+            <!--REQUEST SUMMARY------------------------------------------------>
+            <div>
+                <button class="backBtn" routerLink="/dashboard" mat-icon-button>
+                <mat-icon class="backicon">chevron_left</mat-icon>
+              </button>
+                <div>
+                    <button mat-raised-button (click)="open(cancelReason)" class="cancelBtn">Cancel Request</button>
+                </div>
+
+                <mat-card class="summary">
+                    <div>
+                        <img class="remindervector" mat-card-image src="../../assets/reminder.png">
+                        <h1 class="title">Booking Details</h1>
+
+                        <label class="label">View your booking details.</label>
+
+                    </div>
+
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="header1">First Name</th>
+                                <th class="header1">Last Name</th>
+                                <th class="header1">Contact Number</th>
+                                <th class="header1">Address</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="body1">{{data.service_firstname}}</td>
+                                <td class="body1">{{data.service_lastname}}</td>
+                                <td class="body1">{{data.service_phoneNumber}}</td>
+                                <td class="body1">{{data.service_address}}</td>
+                            </tr>
+                        </tbody>
+                        <thead>
+                            <tr>
+                                <th class="header2">Address Details</th>
+                                <th class="header2">City</th>
+                                <th class="header2">Property Type</th>
+                                <th class="header2">Barangay</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="body2">{{data.service_addressDetails}}</td>
+                                <td class="body2">{{data.service_city}}</td>
+                                <td class="body2">{{data.service_property_type}}</td>
+                                <td class="body2">{{data.service_barangay}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="header1">Appliance</th>
+                                <th class="header1">Service</th>
+                                <th class="header1">Brand</th>
+                                <th class="header1">Unit Type</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="body1">{{data.service_appliance}}</td>
+                                <td class="body1">{{data.service_type}}</td>
+                                <td class="body1">{{data.service_brand}}</td>
+                                <td class="body1">{{data.service_unitType}}</td>
+                            </tr>
+                        </tbody>
+                        <thead>
+                            <tr>
+                                <th class="header2">Unit Problem</th>
+                                <th class="header2">Scheduled Date</th>
+                                <th class="header2">Time Slot</th>
+                                <th class="header2">Instruction</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="body2">{{data.service_unitProb}}</td>
+                                <td class="body2">{{data.service_date | date}}</td>
+                                <td class="body2">{{data.service_timeslot}}</td>
+                                <td class="body2">{{data.service_instruction}}</td>
+
+                            </tr>
+                        </tbody>
+                    </table>
+                </mat-card>
+            </div>
+            <mat-card class="profilecard">
+                <div class="mat-dialog-content">
+                    <h2 class="techname">{{technician.fullname}}</h2>
+                    <ng-template #t let-fill="fill">
+                        <mat-icon class="star" [class.full]="fill === 100">star</mat-icon>
+                    </ng-template>
+
+                    <ngb-rating [(rate)]="currentRate" [starTemplate]="t" [readonly]="true" [max]="5"></ngb-rating>
+                    <p class="contactnumber">ID: <b>{{technician.techID}}</b></p>
+                    <p class="contactnumber">Gender &nbsp;&nbsp;&nbsp;&nbsp;Contact Number</p>
+                    <p class="number">&nbsp;&nbsp;{{technician.gender}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{technician.number}}
+                </div>
+            </mat-card>
+        </div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
 
 <ng-template #cancelReason let-c="close" let-d="dismiss">
     <div class="modal-header">
